--- a/css cheat sheet/css/style.css
+++ b/css cheat sheet/css/style.css
@@ -173,7 +173,12 @@ list-style: none;
     height: 500 px;
     border: 1px solid;
  margin-top: 30 px;
-    position: relative;    
+    position: relative; 
+    background-image: url('../images/bgimage.jpeg');   
+
+    background-position: 100px 200 px;
+    background-repeat: no-repeat;
+    background-position: center top;
 }
 
 
@@ -187,4 +192,26 @@ list-style: none;
     position: absolute;
     bottom: 40px;
     right: 100px;
+}
+
+.fix-me{
+    position: fixed;
+    top: 400px;
+    color: white;
+}
+
+.my-list li:first-child{
+    background: red;
+}
+
+.my-list li:last-child{
+    background:blue;
+}
+
+.my-list li:nth-child(5){
+    background: yellow;
+}
+
+.my-list li:nth-child(even){
+    background: grey;
 }
